--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 [dependencies]
 bitcoin = "0.26"
 bgp-rs = "0.6"
-tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 bytes = "1"
 futures = "0.3"
@@ -17,6 +16,18 @@ num_cpus = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
 pin-project-lite = "0.2"
+
+[dependencies.tokio]
+version = "1"
+features = [
+    "fs",
+    "io-std",
+    "io-util",
+    "macros",
+    "net",
+    "rt-multi-thread",
+    "time",
+]
 
 [profile.dev]
 panic = "abort"
